--- a/FacebookCompose/app/src/main/res/values/strings.xml
+++ b/FacebookCompose/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Facebook Compose</string>
+    <string name="what_is_on_your_mind">What\'s on your mind?</string>
+    <string name="profile_image">Profile image</string>
 </resources>
